# cs-search-engine-architecture

./: .gitignore  README.md  download.sh  gpu_task_internal.py  mem_log.csv  profile.txt  pyproject.toml  pyrightconfig.json  setup.py
memes/: mensa
notebooks/: log.ipynb  profile.ipynb
scripts/: embed_corpus.py  embed_corpus.sh  ram_monitor.sh  semantic_search.py  test_query.py
sea/: __init__.py  bm25.pyx  corpus.pxd  corpus.pyx  disk_array.pxd  disk_array.pyx  document.pxd  document.py  document.pyx  engine.py  engine.pyx  feature_mapping.pyx  index.py  indexer.py  indexer.pyx  main.py  posting.pyx  posting_list.pxd  posting_list.pyx  query.pxd  query.py  query.pyx  spelling_corrector.pxd  spelling_corrector.pyx  tokenizer.pxd  tokenizer.py  tokenizer.pyx  util.py
sea/learning_to_rank/: build_dataset.py  dataset.py  feature_mapping.pxd  feature_mapping.pyx  loss_function.ipynb  model.py  test.py  test_metrics.py  train.py  train.sh
sea/util/: disk_array.pxd  disk_array.pyx  fast_stemmer.pxd  fast_stemmer.pyx  gamma.pyx  load.py  memory.pxd  memory.pyx
test/: load_doc.py  test.py  test_corpus.py  test_disk_array.py  test_document.py  test_gamma.py  test_gamma_code.py  test_indexer.py  test_posting.py  test_query.py  test_query_parser.py  test_spelling_corrector.py  test_tokenizer.py
tmp/: tokenizer.idx
