[tool.poetry]
name = "sea"
version = "0.1.0"
description = ""
authors = ["Vincent Eichhorn <vincent.eichhorn@student.hpi.de>", "Alicia Cabrejas-Leonhardt <alicia.cabrejas-leonhardt@student.hpi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
cython = "^3.1.6"
whoosh = "^2.7.4"
tqdm = "^4.67.1"
nltk = "^3.9.2"
numpy = "^2.3.4"
setuptools = "^80.9.0"
pytest = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sea = "sea.main:main"
