[tool.poetry]
name = "sea"
version = "0.1.0"
description = ""
authors = ["Vincent Eichhorn <vincent.eichhorn@student.hpi.de>", "Alicia Cabrejas-Leonhardt <alicia.cabrejas-leonhardt@student.hpi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
cython = "^3.1.6"
whoosh = "^2.7.4"
tqdm = "^4.67.1"
nltk = "^3.9.2"
numpy = "^2.3.4"
setuptools = "^80.9.0"
pytest = "^9.0.0"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
pympler = "^1.1"
memory-profiler = "^0.61.0"
spacy = "^3.8.9"
pystemmer = "^3.0.0"
torch = "^2.9.1"
wandb = "^0.23.1"
seaborn = "^0.13.2"
transformers = "^4.57.6"
einops = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
